[gd_scene load_steps=2 format=3 uid="uid://bd3k5a7t5fqsl"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_41xrh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_41xrh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -81.5
offset_right = 57.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "MAIN MENU"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="ScoreboardButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SCOREBOARD"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Login" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 422.5
offset_top = 353.5
offset_right = 537.5
offset_bottom = 353.5

[node name="LoginButton" type="Button" parent="Login"]
layout_mode = 1
offset_left = -402.5
offset_top = -330.5
offset_right = -302.5
offset_bottom = -299.5
text = "LOGIN"

[node name="LoggedAs" type="Label" parent="Login"]
layout_mode = 1
offset_left = -288.5
offset_top = -326.5
offset_right = 373.5
offset_bottom = -303.5

[node name="LoginBlocker" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -183.5
offset_right = 183.5
offset_bottom = 183.5
grow_horizontal = 2
grow_vertical = 2

[node name="LoginCheck" type="Label" parent="LoginBlocker"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "
LOGIN TO PLAY"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScoreboardButton" to="." method="_on_scoreboard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Login/LoginButton" to="." method="_on_login_button_pressed"]
